--- a/project/mainpage_body_.html
+++ b/project/mainpage_body_.html
@@ -1009,7 +1009,7 @@
                     <ul>
                       <li>
                         <a
-                          href="http://www.gamejob.co.kr/List_GI/GIB_Read.asp?Gi_No=204879"
+                          href="#"
                           target="_blank"
                           onclick="GA_Event('홈_PC','게임분야채용정보','게임잡이동_브이에이게임즈_[아우터플레인] 서버 프로그래머');"
                           >[아우터플레인] 서버 프로그래머</a
@@ -1017,7 +1017,7 @@
                       </li>
                       <li>
                         <a
-                          href="http://www.gamejob.co.kr/List_GI/GIB_Read.asp?Gi_No=204923"
+                          href="#"
                           target="_blank"
                           onclick="GA_Event('홈_PC','게임분야채용정보','게임잡이동_브이에이게임즈_[아우터플레인] 전 직군 인재채용');"
                           >[아우터플레인] 전 직군 인재채용</a
@@ -1025,7 +1025,7 @@
                       </li>
                       <li>
                         <a
-                          href="http://www.gamejob.co.kr/List_GI/GIB_Read.asp?Gi_No=228647"
+                          href="#"
                           target="_blank"
                           onclick="GA_Event('홈_PC','게임분야채용정보','게임잡이동_브이에이게임즈_[레트로홀릭스튜디오] 도트 디자이너 모집');"
                           >[레트로홀릭스튜디오] 도트 디자이너 모집</a
@@ -1035,7 +1035,7 @@
                     <div class="extra">
                       <div class="total">진행중인 채용공고 <span>13</span>건</div>
                       <a
-                        href="http://www.gamejob.co.kr/Company/Detail/?M=31127027"
+                        href="#"
                         target="_blank"
                         class="btn_more"
                         onclick="GA_Event('홈_PC','게임분야채용정보','게임잡이동_브이에이게임즈_더보기');"
@@ -1062,7 +1062,7 @@
                     <ul>
                       <li>
                         <a
-                          href="http://www.gamejob.co.kr/List_GI/GIB_Read.asp?Gi_No=229611"
+                          href="#"
                           target="_blank"
                           onclick="GA_Event('홈_PC','게임분야채용정보','게임잡이동_111퍼센트㈜_[111퍼센트]마케팅 영상 콘텐츠 디자이너');"
                           >[111퍼센트]마케팅 영상 콘텐츠 디자이너</a
@@ -1070,7 +1070,7 @@
                       </li>
                       <li>
                         <a
-                          href="http://www.gamejob.co.kr/List_GI/GIB_Read.asp?Gi_No=229308"
+                          href="#"
                           target="_blank"
                           onclick="GA_Event('홈_PC','게임분야채용정보','게임잡이동_111퍼센트㈜_[111퍼센트] 로블록스 개발자 모집');"
                           >[111퍼센트] 로블록스 개발자 모집</a
@@ -1078,7 +1078,7 @@
                       </li>
                       <li>
                         <a
-                          href="http://www.gamejob.co.kr/List_GI/GIB_Read.asp?Gi_No=228974"
+                          href="#"
                           target="_blank"
                           onclick="GA_Event('홈_PC','게임분야채용정보','게임잡이동_111퍼센트㈜_[곰블]게임 클라이언트 개발자');"
                           >[곰블]게임 클라이언트 개발자</a
@@ -1088,7 +1088,7 @@
                     <div class="extra">
                       <div class="total">진행중인 채용공고 <span>12</span>건</div>
                       <a
-                        href="http://www.gamejob.co.kr/Company/Detail/?M=20978266"
+                        href="#"
                         target="_blank"
                         class="btn_more"
                         onclick="GA_Event('홈_PC','게임분야채용정보','게임잡이동_111퍼센트㈜_더보기');"
@@ -1115,7 +1115,7 @@
                     <ul>
                       <li>
                         <a
-                          href="http://www.gamejob.co.kr/List_GI/GIB_Read.asp?Gi_No=227496"
+                          href="#"
                           target="_blank"
                           onclick="GA_Event('홈_PC','게임분야채용정보','게임잡이동_게임듀오_[경력] 유니티 클라이언트 개발자 모집');"
                           >[경력] 유니티 클라이언트 개발자 모집</a
@@ -1123,7 +1123,7 @@
                       </li>
                       <li>
                         <a
-                          href="http://www.gamejob.co.kr/List_GI/GIB_Read.asp?Gi_No=227475"
+                          href="#"
                           target="_blank"
                           onclick="GA_Event('홈_PC','게임분야채용정보','게임잡이동_게임듀오_[경력] 퍼포먼스 마케터 모집');"
                           >[경력] 퍼포먼스 마케터 모집</a
@@ -1131,7 +1131,7 @@
                       </li>
                       <li>
                         <a
-                          href="http://www.gamejob.co.kr/List_GI/GIB_Read.asp?Gi_No=227441"
+                          href="#"
                           target="_blank"
                           onclick="GA_Event('홈_PC','게임분야채용정보','게임잡이동_게임듀오_[경력] QA 엔지니어 모집');"
                           >[경력] QA 엔지니어 모집</a
@@ -1141,7 +1141,7 @@
                     <div class="extra">
                       <div class="total">진행중인 채용공고 <span>19</span>건</div>
                       <a
-                        href="http://www.gamejob.co.kr/Company/Detail/?M=29576203"
+                        href="#"
                         target="_blank"
                         class="btn_more"
                         onclick="GA_Event('홈_PC','게임분야채용정보','게임잡이동_게임듀오_더보기');"
@@ -1168,7 +1168,7 @@
                     <ul>
                       <li>
                         <a
-                          href="http://www.gamejob.co.kr/List_GI/GIB_Read.asp?Gi_No=227579"
+                          href="#"
                           target="_blank"
                           onclick="GA_Event('홈_PC','게임분야채용정보','게임잡이동_NHN_[NHN] GameBI DW/DM 엔지니어');"
                           >[NHN] GameBI DW/DM 엔지니어</a
@@ -1176,7 +1176,7 @@
                       </li>
                       <li>
                         <a
-                          href="http://www.gamejob.co.kr/List_GI/GIB_Read.asp?Gi_No=228552"
+                          href="#"
                           target="_blank"
                           onclick="GA_Event('홈_PC','게임분야채용정보','게임잡이동_NHN_[NHN] 글로벌 신규 소셜 카지노 게임사업 PM');"
                           >[NHN] 글로벌 신규 소셜 카지노 게임사업 PM</a
@@ -1184,7 +1184,7 @@
                       </li>
                       <li>
                         <a
-                          href="http://www.gamejob.co.kr/List_GI/GIB_Read.asp?Gi_No=227558"
+                          href="#"
                           target="_blank"
                           onclick="GA_Event('홈_PC','게임분야채용정보','게임잡이동_NHN_[NHN] 글로벌 신규 소셜 카지노 게임 서버 개발');"
                           >[NHN] 글로벌 신규 소셜 카지노 게임 서버 개발</a
@@ -1194,7 +1194,7 @@
                     <div class="extra">
                       <div class="total">진행중인 채용공고 <span>17</span>건</div>
                       <a
-                        href="http://www.gamejob.co.kr/Company/Detail/?M=13669595"
+                        href="#"
                         target="_blank"
                         class="btn_more"
                         onclick="GA_Event('홈_PC','게임분야채용정보','게임잡이동_NHN_더보기');"
@@ -1207,7 +1207,7 @@
                   </li>
                 </ul>
                 <a
-                  href="http://www.gamejob.co.kr"
+                  href="#"
                   class="btn_more_header"
                   target="_blank"
                   onclick="GA_Event('홈_PC','게임분야채용정보','게임잡이동_채용광고더보기');"
