--- a/project/nav.html
+++ b/project/nav.html
@@ -16,9 +16,21 @@
     <!-- [4] a 모양 미리 만들어두기 -->
     
     <!-- [5] layout 영역 -->
+    <!-- [5] layout 영역 -->
+    <link rel="stylesheet" href="css/jobkh_layout.css">
+    <!-- [6] header 영역 -->
+    <link rel="stylesheet" href="css/jobkh_header.css">
+    <!-- [7] nav 영역 -->
     <link rel="stylesheet" href="css/jobkh_nav.css">
+    <!-- [8] main 영역 -->
+    <link rel="stylesheet" href="css/jobkh_main.css">
+    <!-- [9] footer 영역 -->
+    <link rel="stylesheet" href="css/jobkh_footer.css">
+    <!-- swiper css -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <!-- 부트스트랩 css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <!-- jQuery 스크립트 -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         $(document).ready(function() {
@@ -1108,7 +1120,7 @@
                             </p>
                             <div class="noti-slide">
                                 <div class="swiper-container verti">
-                                    <ul class="swiper-wrapper lst">
+                                    <ul class="swiper-wrapper lst noti-ul">
                                         <li class="swiper-slide noti">
                                             <a href="#" target="_blank">[사전공지] 개인회원 만 나이 시행 안내</a>
                                         </li>
