--- a/project/index.html
+++ b/project/index.html
@@ -106,7 +106,7 @@
                 }
             });
             $.ajax({
-                url : "mainpage_body_.html",
+                url : "main.html",
                 success : function(result) {
                     var contentrefine = $(".wrap.content").html(result).find('main');
                     $('.wrap.content').html(contentrefine);
