--- a/project/nav.html
+++ b/project/nav.html
@@ -103,24 +103,24 @@
                 <div class="point-left point-box active">
                     <div class="tab-menu">
                         <ul class="tab-menu1 person-tab active">
-                            <li class="tab-menu1-1 active" data-contentnumber="1"><a href="#" id="news"># 공채속보</a></li>
-                            <li class="tab-menu1-1" data-contentnumber="2"><a href="#" id="AI"># AI추천</a></li>
-                            <li class="tab-menu1-1" data-contentnumber="3"><a href="#"># 전문채용관</a></li>
-                            <li class="tab-menu1-1" data-contentnumber="4"><a href="#"># 기업·연봉</a></li>
-                            <li class="tab-menu1-1" data-contentnumber="5"><a href="#"># 진로탐색</a></li>
-                            <li class="tab-menu1-1" data-contentnumber="6"><a href="#"># 취업톡톡</a></li>
+                            <li class="tab-menu1-1 active" data-contentnumber="1"><a href="# return false;" id="news"># 공채속보</a></li>
+                            <li class="tab-menu1-1" data-contentnumber="2"><a href="# return false;" id="AI"># AI추천</a></li>
+                            <li class="tab-menu1-1" data-contentnumber="3"><a href="# return false;"># 전문채용관</a></li>
+                            <li class="tab-menu1-1" data-contentnumber="4"><a href="# return false;"># 기업·연봉</a></li>
+                            <li class="tab-menu1-1" data-contentnumber="5"><a href="# return false;"># 진로탐색</a></li>
+                            <li class="tab-menu1-1" data-contentnumber="6"><a href="# return false;"># 취업톡톡</a></li>
                         </ul>
                         <ul class="tab-menu1 corp-tab">
-                            <li class="tab-menu1-2 active" data-contentnumber="7"><a href="#" id="corpLounge"># 기업라운지</a></li>
-                            <li class="tab-menu1-2"><a href="#" id="corpLounge"></a></li>
-                            <li class="tab-menu1-2"><a href="#" id="corpLounge"></a></li>
-                            <li class="tab-menu1-2"><a href="#" id="corpLounge"></a></li>
-                            <li class="tab-menu1-2"><a href="#" id="corpLounge"></a></li>
-                            <li class="tab-menu1-2"><a href="#" id="corpLounge"></a></li>
+                            <li class="tab-menu1-2 active" data-contentnumber="7"><a href="# return false;" id="corpLounge"># 기업라운지</a></li>
+                            <li class="tab-menu1-2"><a href="# return false;" id="corpLounge"></a></li>
+                            <li class="tab-menu1-2"><a href="# return false;" id="corpLounge"></a></li>
+                            <li class="tab-menu1-2"><a href="# return false;" id="corpLounge"></a></li>
+                            <li class="tab-menu1-2"><a href="# return false;" id="corpLounge"></a></li>
+                            <li class="tab-menu1-2"><a href="# return false;" id="corpLounge"></a></li>
                         </ul>
                         <ul class="tab-menu2">
-                            <li class="tab-menu2 person-menu active"><a href="#">개인</a></li>
-                            <li class="tab-menu2 corp-menu"><a href="#">기업</a></li>
+                            <li class="tab-menu2 person-menu active"><a href="# return false;">개인</a></li>
+                            <li class="tab-menu2 corp-menu"><a href="# return false;">기업</a></li>
                         </ul>
                     </div>
                     <!--공채속보-->
@@ -312,8 +312,8 @@
                                 </div>
                                 <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
                                 <div class="btn-control">
-                                    <div class="swiper-button-prev instance-prev1" tabindex="0" role="button" aria-label="Previous slide" aria-disabled="false"></div>
-                                    <div class="swiper-button-next instance-next1" tabindex="0" role="button" aria-label="Next slide" aria-disabled="false"></div>
+                                    <div class="swiper-button-prev instance-prev1" tabindex="0" role="button" aria-label="Previous slide"></div>
+                                    <div class="swiper-button-next instance-next1" tabindex="0" role="button" aria-label="Next slide"></div>
                                 </div>
                             </div>
                         </div>
@@ -328,7 +328,7 @@
                                         <ul class="box-lst">
                                             <li>
                                                 <div class="box">
-                                                    <a href="#" class="link" data-rcmdsvcagi-galabel="놓치면 안되는 공고" target="_blank">
+                                                    <a href="# return false;" class="link" data-rcmdsvcagi-galabel="놓치면 안되는 공고" target="_blank">
                                                         <span class="bdgs">
                                                             <span class="ut-bdg i">놓치면 안되는 공고</span>
                                                         </span>
@@ -340,7 +340,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="box">
-                                                    <a href="#" class="link" data-rcmdsvcagi-galabel="놓치면 안되는 공고" target="_blank">
+                                                    <a href="# return false;" class="link" data-rcmdsvcagi-galabel="놓치면 안되는 공고" target="_blank">
                                                         <span class="bdgs">
                                                             <span class="ut-bdg i">놓치면 안되는 공고</span>
                                                         </span>
@@ -1116,25 +1116,25 @@
                     <div class="point-right point-box">
                         <div class="notice-wrap">
                             <p class="tit">
-                                <a href="#" target="_blank">공지</a>
+                                <a href="# return false;" target="_blank">공지</a>
                             </p>
                             <div class="noti-slide">
                                 <div class="swiper-container verti">
                                     <ul class="swiper-wrapper lst noti-ul">
                                         <li class="swiper-slide noti">
-                                            <a href="#" target="_blank">[사전공지] 개인회원 만 나이 시행 안내</a>
+                                            <a href="# return false;" target="_blank">[사전공지] 개인회원 만 나이 시행 안내</a>
                                         </li>
                                         <li class="swiper-slide noti">
-                                            <a href="#" target="_blank">[이벤트] &lt;이상한 나라의 괴짜들 展&gt; 초대권 받자!</a>
+                                            <a href="# return false;" target="_blank">[이벤트] &lt;이상한 나라의 괴짜들 展&gt; 초대권 받자!</a>
                                         </li>
                                         <li class="swiper-slide noti">
-                                            <a href="#" target="_blank">``원픽``으로 이행시 짓고 시원한 빙수 받자!</a>
+                                            <a href="# return false;" target="_blank">``원픽``으로 이행시 짓고 시원한 빙수 받자!</a>
                                         </li>
                                         <li class="swiper-slide noti">
-                                            <a href="#" target="_blank">전국 대학생 우산 대여 캠페인</a>
+                                            <a href="# return false;" target="_blank">전국 대학생 우산 대여 캠페인</a>
                                         </li>
                                         <li class="swiper-slide noti">
-                                            <a href="#" target="_blank">[시스템 점검 공지] 06/23(금) AM 00시-06시</a>
+                                            <a href="# return false;" target="_blank">[시스템 점검 공지] 06/23(금) AM 00시-06시</a>
                                         </li>
                                     </ul>
                             <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
@@ -1146,24 +1146,24 @@
                         <div class="tool">
                             <p class="tit">취업 성공 툴</p>
                             <ul class="menu">
-                                <li class="menu-item"><a href="#"><img src="images/자소서.png">자소서작성</a></li>
-                                <li class="menu-item"><a href="#"><img src="images/맞춤법.png">맞춤법검사</a></li>
-                                <li class="menu-item"><a href="#"><img src="images/글자수.png">글자수세기</a></li>
-                                <li class="menu-item"><a href="#"><img src="images/학점.png">학점계산기</a></li>
+                                <li class="menu-item"><a href="# return false;"><img src="images/자소서.png">자소서작성</a></li>
+                                <li class="menu-item"><a href="# return false;"><img src="images/맞춤법.png">맞춤법검사</a></li>
+                                <li class="menu-item"><a href="# return false;"><img src="images/글자수.png">글자수세기</a></li>
+                                <li class="menu-item"><a href="# return false;"><img src="images/학점.png">학점계산기</a></li>
                             </ul>
                         </div>
                         <hr>
                         <div class="rcmd">
                             <p class="tit">추천 서비스</p>
                             <div class="tags blind">
-                                <p><a href="#" class="onpick"><img src="images/check.png" width="15px" height="15px"> 이직은 원픽</a></p>
-                                <p><a href="#"># 합격자소서</a></p>
-                                <p><a href="#"># 인적성·면접후기</a></p>
-                                <p><a href="#"># 공채달력</a></p>
-                                <p><a href="#"># 합격스펙</a></p>
-                                <p><a href="#"># 연봉검색순위</a></p>
-                                <p><a href="#"># 일간 채용 TOP100</a></p>
-                                <p><a href="#"># 이력서 다운로드</a></p>
+                                <p><a href="# return false;" class="onpick"><img src="images/check.png" width="15px" height="15px"> 이직은 원픽</a></p>
+                                <p><a href="# return false;"># 합격자소서</a></p>
+                                <p><a href="# return false;"># 인적성·면접후기</a></p>
+                                <p><a href="# return false;"># 공채달력</a></p>
+                                <p><a href="# return false;"># 합격스펙</a></p>
+                                <p><a href="# return false;"># 연봉검색순위</a></p>
+                                <p><a href="# return false;"># 일간 채용 TOP100</a></p>
+                                <p><a href="# return false;"># 이력서 다운로드</a></p>
                             </div>
                         </div>
                     </div>
