--- a/project/nav.html
+++ b/project/nav.html
@@ -5,17 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>실습</title>
     <!-- [1] 해상도 - 최적해상도 1260 결정 -->
-    <!-- [2] content 영역 1040px 80vw 90% 배치(center) -->
+    <!-- [2] content 영역 1260px 설정 -->
     <!-- [3] reset.css 폴더경로 -->
     <link rel="stylesheet" href="css/reset.css">
-    <!-- TODO js jQuery -->
     <!-- [4] project명 또는 core.css 폴더경로 - bootstrap 등으로 대체 -->
     <!-- [4] 기본색상 10~15개 정도 class 미리 만들어두기 -->
     <!-- [4] 폰트크기 3~7개 정도 class 미리 만들어두기 -->
     <!-- [4] button 3개 class 미리 만들어두기 -->
     <!-- [4] a 모양 미리 만들어두기 -->
     
-    <!-- [5] layout 영역 -->
     <!-- [5] layout 영역 -->
     <link rel="stylesheet" href="css/jobkh_layout.css">
     <!-- [6] header 영역 -->
