slider button shape/ oven

--- a/project/main.html
+++ b/project/main.html
@@ -205,57 +205,57 @@
                       <div class="carousel-inner">
                         <div class="carousel-item active">
                           <ul>
-                            <li>
+                            <li class="sliderbutton">
                               <div style="align-content: center">
-                                <button type="button">냠</button>
-                                <button type="button">냠</button>
-                                <button type="button">냠</button>
-                                <button type="button">냠</button>
-                                <button type="button">냠</button>
-                                <button type="button">냠</button>
-                                <button type="button">냠</button>
-                                <button type="button">냠</button>
-                                <button type="button">냠</button>
-                                <button type="button">냠</button>
-                                <button type="button">냠</button>
+                                <button type="button"><img src="https://imgs.jobkorea.co.kr/Images/Logo/86/a/s/2000q80cpqaqckaq_3720cqbrxiprp2vc.gif?p=y&hash=c" alt=""></button>
+                                <button type="button"><img src="https://imgs.jobkorea.co.kr/Images/Logo/86/k/a/2360y60pycx39y_2120py9kw3d29p.gif?p=y&hash=c" alt=""></button>
+                                <button type="button"><img src="https://imgs.jobkorea.co.kr/Images/Logo/86/k/o/2140fa0gmajnqld9wf_3620gfdlwndaqgj23g.gif?p=y&hash=c" alt=""></button>
+                                <button type="button"><img src="https://imgs.jobkorea.co.kr/Images/Logo/86/e/l/2000d80hjipcdscd_3720hdbqlzcix2ih.gif?p=y&hash=c" alt=""></button>
+                                <button type="button"><img src="https://imgs.jobkorea.co.kr/Images/Logo/86/b/y/2720e40oarke_2020oe7ok2xo.gif?p=y&hash=c" alt=""></button>
+                                <button type="button"><img src="https://imgs.jobkorea.co.kr/Images/Logo/86/k/d/2380v70pfahee2s_2420pvaaqohesvp.gif?p=y&hash=c" alt=""></button>
+                                <button type="button"><img src="https://imgs.jobkorea.co.kr/Images/Logo/86/g/o/2360t60kbdxoet_2120kt9kxmj2qk.gif?p=y&hash=c" alt=""></button>
+                                <button type="button"><img src="https://imgs.jobkorea.co.kr/Images/Logo/86/i/n/2380d70ji8o5625_2420jdarj5036dj.gif?p=y&hash=c" alt=""></button>
+                                <button type="button"><img src="https://imgs.jobkorea.co.kr/Images/Logo/86/g/o/2360t60kbksozt_2120kt9vxfx2qk.gif?p=y&hash=c" alt=""></button>
+                                <button type="button"><img src="https://imgs.jobkorea.co.kr/Images/Logo/86/k/b/2000m80fyabjpqwm_3720fmbemqnoo2pf.gif?p=y&hash=c" alt=""></button>
+                                <button type="button"><img src="https://imgs.jobkorea.co.kr/Images/Logo/86/g/u/2380s70oprozi2l_2420osaredolmso.gif?p=y&hash=c" alt=""></button>
                               </div>
                             </li>
                           </ul>
                         </div>
                         <div class="carousel-item">
                           <ul>
-                            <li>
+                            <li class="sliderbutton">
                               <div style="align-content: center">
-                                <button type="button">냠</button>
-                                <button type="button">냠</button>
-                                <button type="button">냠</button>
-                                <button type="button">냠</button>
-                                <button type="button">냠</button>
-                                <button type="button">냠</button>
-                                <button type="button">냠</button>
-                                <button type="button">냠</button>
-                                <button type="button">냠</button>
-                                <button type="button">냠</button>
-                                <button type="button">냠</button>
+                                <button type="button"><img src="https://imgs.jobkorea.co.kr/Images/Logo/86/w/s/2360Z60XMKUJLZ_2120XZ9IFBX2CX.gif?p=y&hash=c" alt=""></button>
+                                <button type="button"><img src="https://imgs.jobkorea.co.kr/Images/Logo/86/w/r/2140w50ltiv2w_2620lw8pjgrwl.gif?p=y&hash=c" alt=""></button>
+                                <button type="button"><img src="https://imgs.jobkorea.co.kr/Images/Logo/86/d/e/2380P70MQGOHL2A_2420MPaRALGMVPM.gif?p=y&hash=c" alt=""></button>
+                                <button type="button"><img src="https://imgs.jobkorea.co.kr/Images/Logo/86/c/o/2360i60ku6txzi_2120ki9wxf52fk.gif?p=y&hash=c" alt=""></button>
+                                <button type="button"><img src="https://imgs.jobkorea.co.kr/Images/Logo/86/h/a/2000a80qnhalj08a_3720qabrpdl7u24q.gif?p=y&hash=c" alt=""></button>
+                                <button type="button"><img src="https://imgs.jobkorea.co.kr/Images/Logo/86/m/n/2380u70jzza8l26_2420juamjlm50uj.gif?p=y&hash=c" alt=""></button>
+                                <button type="button"><img src="https://imgs.jobkorea.co.kr/Images/Logo/86/u/b/2360f60mzpujqf_2120mf9ieow2cm.gif?p=y&hash=c" alt=""></button>
+                                <button type="button"><img src="https://imgs.jobkorea.co.kr/Images/Logo/86/s/a/2360xb0pfutcw6b2921_3120pxewwpotd3574xp.gif?p=y&hash=c" alt=""></button>
+                                <button type="button"><img src="https://imgs.jobkorea.co.kr/Images/Logo/86/k/a/2000m80qyex4356m_3720qmbcp8b9921q.gif?p=y&hash=c" alt=""></button>
+                                <button type="button"><img src="https://imgs.jobkorea.co.kr/Images/Logo/86/k/c/2380v70rf8t5620_2420rvato5086vr.gif?p=y&hash=c" alt=""></button>
+                                <button type="button"><img src="https://imgs.jobkorea.co.kr/Images/Logo/86/d/o/2360db0kjtdpotdec24_3120kdecxubcwjb2hdk.gif?p=y&hash=c" alt=""></button>
                               </div>
                             </li>
                           </ul>
                         </div>
                         <div class="carousel-item">
                           <ul>
-                            <li>
+                            <li class="sliderbutton">
                               <div style="align-content: center">
-                                <button type="button">냠</button>
-                                <button type="button">냠</button>
-                                <button type="button">냠</button>
-                                <button type="button">냠</button>
-                                <button type="button">냠</button>
-                                <button type="button">냠</button>
-                                <button type="button">냠</button>
-                                <button type="button">냠</button>
-                                <button type="button">냠</button>
-                                <button type="button">냠</button>
-                                <button type="button">냠</button>
+                                <button type="button"><img src="https://imgs.jobkorea.co.kr/Images/Logo/86/n/e/2000i80dcekqlkci_3720dibwjhbip2vd.gif?p=y&hash=c" alt=""></button>
+                                <button type="button"><img src="https://imgs.jobkorea.co.kr/Images/Logo/86/f/a/2000x80qgwxzkoox_3720qxbcpwkjd2wq.gif?p=y&hash=c" alt=""></button>
+                                <button type="button"><img src="https://imgs.jobkorea.co.kr/Images/Logo/86/n/h/2000i80acrccc53i_3720aibinia8x21a.gif?p=y&hash=c" alt=""></button>
+                                <button type="button"><img src="https://imgs.jobkorea.co.kr/Images/Logo/86/m/a/2720t90wuqrbgdm26_3020wtcuqxlcs4jtw.gif?p=y&hash=c" alt=""></button>
+                                <button type="button"><img src="https://imgs.jobkorea.co.kr/Images/Logo/86/a/g/2720w90bqjg5q4524_3020bwcxswp9876wb.gif?p=y&hash=c" alt=""></button>
+                                <button type="button"><img src="https://imgs.jobkorea.co.kr/Images/Logo/86/w/7/2140w508t5328_26208w89064w8.gif?p=y&hash=c" alt=""></button>
+                                <button type="button"><img src="https://imgs.jobkorea.co.kr/Images/Logo/86/k/o/2000m80wyqckcsjm_3720wmbikipdv2iw.gif?p=y&hash=c" alt=""></button>
+                                <button type="button"><img src="https://imgs.jobkorea.co.kr/Images/Logo/86/t/e/2140va0akahmstr9cv_3620avdsdodiaxe23a.gif?p=y&hash=c" alt=""></button>
+                                <button type="button"><img src="https://imgs.jobkorea.co.kr/Images/Logo/86/c/s/2720u90frxvcl7q21_3020fucynqgwm84uf.gif?p=y&hash=c" alt=""></button>
+                                <button type="button"><img src="https://imgs.jobkorea.co.kr/Images/Logo/86/n/e/2380j70mjgczj2l_2420mjacajglmjm.gif?p=y&hash=c" alt=""></button>
+                                <button type="button"><img src="https://imgs.jobkorea.co.kr/Images/Logo/86/n/s/2720d90fjqq5h5528_3020fdcwnsl9858df.gif?p=y&hash=c" alt=""></button>
                               </div>
                             </li>
                           </ul>
