--- a/project/footer.html
+++ b/project/footer.html
@@ -18,10 +18,9 @@
             color: #574621;
         }
 
-        article{
-            height: 40px;
-            text-align: left;
-            background-color: azure;
+        article {
+            margin: 40px auto ;
+            background: azure;
         }
 
         #footer ul {
@@ -79,8 +78,8 @@
 <body>
     <div id="footer">
         <article>
-            <p><strong>공지사항     [수상] 잡코리아 '2023 브랜드 파워 1위' 수상 23.06.14</strong></p>
-        </article>    
+            <p><strong>공지사항 [수상] 잡코리아 '2023 브랜드 파워 1위' 수상 23.06.14</strong></p>
+        </article>
         <ul class="footer_service">
             <li><a href="https://jobkoreacareer.oopy.io">회사소개</a></li>
             <li><a href="http://company.jobkorea.co.kr/service/default.asp">운영사이트</a></li>
