--- a/project/nav.html
+++ b/project/nav.html
@@ -1154,7 +1154,7 @@
                         <div class="rcmd">
                             <p class="tit">추천 서비스</p>
                             <div class="tags blind">
-                                <p><a href="# return false;" class="onpick"><img src="images/check.png" width="15px" height="15px"> 이직은 원픽</a></p>
+                                <p><a href="# return false;" class="onpick"><img src="images/check.svg" width="15px" height="15px"> 이직은 원픽</a></p>
                                 <p><a href="# return false;"># 합격자소서</a></p>
                                 <p><a href="# return false;"># 인적성·면접후기</a></p>
                                 <p><a href="# return false;"># 공채달력</a></p>
