--- a/project/footer.html
+++ b/project/footer.html
@@ -7,127 +7,18 @@
     <title>footer</title>
     <!-- [9] footer 영역 -->
     <link rel="stylesheet" href="css/jobkh_footer.css">
-    <style>
-        #footer {
-            width: 1001px;
-            float: left;
-            height: 198px;
-            background: url(images/footer_bg.jpg) top left no-repeat;
-            font-family: Arial, Helvetica, sans-serif;
-            font-size: 12px;
-            color: #574621;
-        }
-
-        article {
-            margin: 40px auto ;
-            background: azure;
-        }
-
-        #footer ul {
-            width: 1000px;
-            text-align: center;
-        }
-
-        #footer li {
-            display: inline;
-            list-style-type: none;
-            line-height: 44px;
-        }
-
-        #footer li a {
-            color: #574621;
-            text-decoration: none;
-            margin: 0 10px;
-        }
-
-        #footer li a:visited {
-            text-decoration: none
-        }
-
-        #footer li a:hover {
-            text-decoration: underline
-        }
-
-        #copyright {
-            width: 1000px;
-            text-align: center;
-            float: left;
-            padding: 104px 0 0 0;
-
-        }
-
-        #copyright span {
-            padding: 0 57px;
-        }
-
-        #copyright a {
-            color: #574621;
-            text-decoration: underline
-        }
-
-        #copyright a:visited {
-            text-decoration: underline
-        }
-
-        #copyright a:hover {
-            text-decoration: none
-        }
-    </style>
+    <link rel="stylesheet" href="/project/css/reset.css">
 </head>
 
 <body>
-    <div id="footer">
-        <article>
-            <p><strong>공지사항 [수상] 잡코리아 '2023 브랜드 파워 1위' 수상 23.06.14</strong></p>
-        </article>
-        <ul class="footer_service">
-            <li><a href="https://jobkoreacareer.oopy.io">회사소개</a></li>
-            <li><a href="http://company.jobkorea.co.kr/service/default.asp">운영사이트</a></li>
-            <li><a href="https://www.jobkorea.co.kr/service_jk/provision/provision_gg.asp">이용약관</a></li>
-            <li><a href="https://www.jobkorea.co.kr/service/PolicyPrivacy"> <strong>개인정보처리방침</strong></a></li>
-            <li><a href="https://www.jobkorea.co.kr/service/ProvisionLOC"> <strong>위치기반서비스이용약관</strong></a></li>
-            <li><a href="http://company.jobkorea.co.kr/network/api.asp">Open API</a></li>
-            <li><a href="https://www.jobkorea.co.kr/service/company/ad">광고문의</a></li>
-            <li><a href="http://company.jobkorea.co.kr/network/default.asp#Partners">제휴문의</a></li>
-            <li><a href="https://www.jobkorea.co.kr/help/faq/user">고객센터</a></li>
-        </ul>
-
-        </ul>
-        <div id="copyright">
-            <span>고객센터 : 1588-9350(평일09:00 ~ 19:00 토요일 09:00 ~ 15:00) | FAX : 02-565-9351 | Email
-                helpdesk@jobkorea.co.kr <br>
-                <!-- <ul class="footer_sns">
-                    <li class="footer__sns-item"><a href="https://blog.naver.com/jobkorea1"><span
-                                class="skip">블로그</span></a></li>
-                    <li class="footer__sns-item"><a href="https://m.post.naver.com/my.nhn?memberNo=9028903"><span
-                                class="skip">포스트</span></a></li>
-                    <li class="footer__sns-item"><a href="https://www.facebook.com/jobkorea"><span
-                                class="skip">페이스북</span></a></li>
-                    <li class="footer__sns-item"><a href="https://www.instagram.com/jobkorea_albamon/"><span
-                                class="skip">인스타그램</span></a></li>
-                    <li class="footer__sns-item"><a
-                            href="https://www.youtube.com/channel/UCOrdY3p46GJh_CYacfwYieg"><span
-                                class="skip">유튜브</span></a></li> -->
-            </span>
-            <br>
-            <span>서울시 서초구 서초대로 301 동익성봉빌딩 16~18층 잡코리아 | 대표 : 윤현준 | 사업자등록번호 : 100-81-34859<br></span>
-            <span>통신판매업 신고번호 : 2016-서울서초-0287호 | 직업정보제공사업 신고번호:서울청제2016-11호 | 유료직업소개소 등록번호 :
-                제2022-3210195-14-5-00035호</span>
-            <span>&copy; <a href="https://www.jobkorea.co.kr/"><strong>JOBKOREA</strong></a> LLC.All rights
-                reserved</span>
-        </div>
-    </div>
-
-    <!-- <div id="footer" class="footer footer--main">
+    <footer>
+        <div id="footer" class="footer footer--main">
             <div class="footer__wrap">
-                <h2 class="skip">잡코리아 기타 정보</h2>
-
                 <div class="footer__notice">
-                    <h3 class="blind">공지사항</h3>
                     <dl class="footer__notice-wrap clear">
                         <dt class="footer__notice-title"><a href="https://www.jobkorea.co.kr/help/notice">공지사항</a></dt>
                         <dd class="footer__notice-text"><a href="https://www.jobkorea.co.kr/help/notice/view?no=14630">
-                                <div class="ellipsis">[이벤트] &lt;이상한 나라의 괴짜들 展&gt; 초대권 받자!</div> <em>23.06.21</em>
+                                <div class="ellipsis">[시스템 점검 공지]6/23(금)AM 00시~06시 &nbsp;</div><em>23.06.19</em>
                             </a></dd>
                     </dl>
                     <ul class="list-service">
@@ -142,26 +33,25 @@
                 </div>
 
                 <div class="footer__service">
-                    <h3 class="blind">잡코리아 서비스 링크</h3>
                     <ul>
-                        <li><a href="https://jobkoreacareer.oopy.io" target="_blank">회사소개</a></li>
-                        <li><a href="http://company.jobkorea.co.kr/service/default.asp" target="_blank">운영사이트</a></li>
+                        <li><a href="https://jobkoreacareer.oopy.io">회사소개</a></li>
+                        <li><a href="http://company.jobkorea.co.kr/service/default.asp">운영사이트</a></li>
                         <li><a href="https://www.jobkorea.co.kr/service_jk/provision/provision_gg.asp"
                                 target="_blank">이용약관</a></li>
                         <li><a href="https://www.jobkorea.co.kr/service/PolicyPrivacy"
                                 target="_blank"><strong>개인정보처리방침</strong></a></li>
                         <li><a href="https://www.jobkorea.co.kr/service/ProvisionLOC"
                                 target="_blank"><strong>위치기반서비스이용약관</strong></a></li>
-                        <li><a href="http://company.jobkorea.co.kr/network/api.asp" target="_blank">Open API</a></li>
-                        <li><a href="https://www.jobkorea.co.kr/service/company/ad" target="_blank">광고문의</a></li>
+                        <li><a href="http://company.jobkorea.co.kr/network/api.asp">Open API</a></li>
+                        <li><a href="https://www.jobkorea.co.kr/service/company/ad">광고문의</a></li>
                         <li><a href="http://company.jobkorea.co.kr/network/default.asp#Partners"
-                                target="_blank">제휴문의</a></li>
-                        <li><a href="https://www.jobkorea.co.kr/help/faq/user" target="_blank">고객센터</a></li>
+                                target="_blank">제휴문의</a>
+                        </li>
+                        <li><a href="https://www.jobkorea.co.kr/help/faq/user">고객센터</a></li>
                     </ul>
                 </div>
 
                 <div class="footer__help">
-                    <h3 class="blind">고객센터</h3>
                     <dl class="footer__help-wrap footer__help-wrap--working-hour">
                         <dt class="footer__help-title">고객센터</dt>
                         <dd class="footer__help-text">1588-9350</dd>
@@ -212,13 +102,11 @@
                     <div class="footer__company-item footer__company-item--job">유료직업소개업 등록번호 : 제2002-3210195-14-5-00035호
                     </div>
                 </div>
-                
-                <!--// 2019.10.24 : 수상로고 추가, 순서 변경 -->
-    <!--<div class="footer__award">
-                
+
+                <div class="footer__award">
                     <ul class="clear">
                         <li class="footer__award-item footer__award-item--kbpi"><a
-                                href="https://www.jobkorea.co.kr/help/notice/view?no=14626" target="_blank">2023 한국산업의
+                                href="https://www.jobkorea.co.kr/help/notice/view?no=14626">2023 한국산업의
                                 브랜드파워 1위<br />(취업전문포털 부문)</a></li>
                         <li class="footer__award-item footer__award-item--bcli"><a
                                 href="https://www.jobkorea.co.kr/help/notice/view?no=14427" target="_blank">2022 브랜드 고객
@@ -227,7 +115,8 @@
                                 href="https://www.jobkorea.co.kr/help/notice/view?no=14625" target="_blank">[인증범위] 온라인
                                 리크루팅 서비스<br />[유효기간] 2022.01.19 ~ 2025.01.18</a></li>
                         <li class="footer__award-item footer__award-item--fav"><a
-                                href="https://www.jobkorea.co.kr/help/notice/view?no=14276" target="_blank">한국대학신문
+                                href="https://www.jobkorea.co.kr/help/notice/view?no=14276" target="_blank"> <img
+                                    src="/project/images/check.png"> 한국대학신문
                                 대상<br>취업플랫폼 선호도 1위</a></li>
                         <li class="footer__award-item footer__award-item--kict"><a
                                 href="https://www.jobkorea.co.kr/help/notice/view?no=13874" target="_blank">업계최초!
@@ -237,15 +126,13 @@
                     <a href="http://company.jobkorea.co.kr/cyber_pr/default.asp#award" target="_blank"
                         class="footer__award--more awardMore">더보기</a>
                 </div>
-                <!--// 2019.10.24 : 수상로고 추가, 순서 변경 -->
-    <!--
+
                 <div class="footer__mobile-service">
                     <a href="http://company.jobkorea.co.kr/Service/default.asp#mobile" target="_blank"
-                        class="footer__mobile-service--information" onclick="GA_Event('홈_PC', '모바일소개', '모바일 서비스 안내');">
+                        class="footer__mobile-service--information">
                         <img src="https://i.jobkorea.kr/content/images/main/footer_mobile_info.png" alt="모바일 서비스 안내">
                     </a>
-                    <a href="https://m.jobkorea.co.kr" class="footer__mobile-service--link"
-                        onclick="window.open(this.href,'popName', 'width=442,height=840,toolbar=no,location=no,scrollbars=yes');GA_Event('홈_PC', '모바일소개', '모바일 버전보기'); return false;"
+                    <a href="https://m.jobkorea.co.kr" class="footer__mobile-service--link" return false;"
                         target="_blank">
                         <img src="https://i.jobkorea.kr/content//images/main/footer_mobile_link.png" alt="모바일 버전보기">
                     </a>
@@ -255,8 +142,8 @@
                     rights reserved.
                 </p>
             </div>
-        </div> -->
-
+        </div>
+    </footer>
 
 </body>
 
